--- a/src/app/equation/equation.component.html
+++ b/src/app/equation/equation.component.html
@@ -6,3 +6,4 @@
 <hr>
 <div>Form is valid?: {{mathForm.valid}}</div>
 <div>Form value: {{mathForm.value | json}}</div>
+<div>Form errors: {{mathForm.errors | json}}</div>
